--- a/c/platformio.ini
+++ b/c/platformio.ini
@@ -7,7 +7,12 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:mkr1000USB]
-platform = atmelsam
+[env:uno]
+platform = atmelavr
 framework = arduino
-board = mkr1000USB
+board = uno
+
+[env:megaatmega2560]
+platform = atmelavr
+framework = arduino
+board = megaatmega2560
