--- a/c/platformio.ini
+++ b/c/platformio.ini
@@ -12,7 +12,7 @@ platform = atmelavr
 framework = arduino
 board = uno
 
-[env:megaatmega2560]
-platform = atmelavr
-framework = arduino
-board = megaatmega2560
+;[env:megaatmega2560]
+;platform = atmelavr
+;framework = arduino
+;board = megaatmega2560
