--- a/c/platformio.ini
+++ b/c/platformio.ini
@@ -7,12 +7,12 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:uno]
-platform = atmelavr
-framework = arduino
-board = uno
-
-;[env:megaatmega2560]
+;[env:uno]
 ;platform = atmelavr
 ;framework = arduino
-;board = megaatmega2560
+;board = uno
+
+[env:megaatmega2560]
+platform = atmelavr
+framework = arduino
+board = megaatmega2560
