Added SD card initialization.

--- a/c/platformio.ini
+++ b/c/platformio.ini
@@ -16,3 +16,8 @@
 platform = atmelavr
 framework = arduino
 board = megaatmega2560
+
+[env:megaADK]
+platform = atmelavr
+framework = arduino
+board = megaADK
